# Finaltask-of-WMJ

identify/: CMakeLists.txt  readme.txt
identify/src/: identify.cpp
